--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -166,7 +166,7 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
     <table id="tb1">
 
         <tr>
-            <td style="font-size:10px;"> kernel width= 1 </td>
+            <td style="font-size:12px; color:red;"> kernel width= 1 </td>
         <td>
 
             <img width="70%" src="../images/image_blur/low1.png" class="center" >
@@ -174,13 +174,13 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
         </td></tr>
 
         <tr>
-            <td style="font-size:10px;"> kernel width= 5 </td>
+            <td style="font-size:12px; color:red;"> kernel width= 5 </td>
         <td>
             <img width="70%" src="../images/image_blur/low5.png" class="center">
         </td></tr>
 
         <tr>
-            <td style="font-size:10px;"> kernel width= 10 </td>
+            <td style="font-size:12px; color:red;"> kernel width= 10 </td>
             <td>
 
             <img width="70%" src="../images/image_blur/low10.png" class="center">
@@ -193,13 +193,14 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
 
 
 <h2 id="s5">3. Image registration</h2>
-        translating and/or rotating an image ($I$) incur another image $I_1$. To precisely obtain the amount of translation and rotation, using domain frequency can be an efficient solution.
+       <p> translating and/or rotating an image ($I$) incur another image $I_1$. To precisely obtain the amount of translation and rotation, using domain frequency can be an efficient solution.
         Let consider translation, meaning $I_1(x,y) = I(x-x_0, y-y_0)$.  <b>Phase only correlation</b> can be used to obtain the precise values for $(x_0, y_0)$. Representing the images
         in their frequncy domain, we have $F_1(u,v) = e^{-j(ux_0+vy_0)} F(u,v)$. Then cross-correlation is computed:
-        $$C(u,v)=\frac{F(u,v)F^{*}_{1}(u,v)}{|F(u,v)||F^{*}_{1}(u,v)|}= e^{-j(ux_0+vy_0)}$$.
+        $$C(u,v)=\frac{F(u,v)F^{*}_{1}(u,v)}{|F(u,v)||F^{*}_{1}(u,v)|}= e^{-j2\pi(\frac{u}{N}x_0+\frac{v}{M}y_0)}$$
+
         Transferring back $C(u,v)$ from frequency domain to spatial domain, we have $c(x,y) = \delta(x-x_0, y-y_0)$. As this is an impulse signal with a single 1 at $(x_0,y_0)$. Therefore, the values of $x_0, y_0$
         can be the maximum of $c(x,y)$.
-
+</p>
         <h3 id="s6"> 3.1. Python code snippet </h3>
 <pre><code class="python">
     import numpy as np
