--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -162,11 +162,10 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
 </div>
 
 
-
     <table id="tb1">
 
         <tr>
-            <td style="font-size:12px; color:red;"> kernel width= 1 </td>
+            <td style="font-size:12px; color:red;"> band-width= 1 </td>
         <td>
 
             <img width="70%" src="../images/image_blur/low1.png" class="center" >
@@ -174,13 +173,13 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
         </td></tr>
 
         <tr>
-            <td style="font-size:12px; color:red;"> kernel width= 5 </td>
+            <td style="font-size:12px; color:red;"> band-width= 5 </td>
         <td>
             <img width="70%" src="../images/image_blur/low5.png" class="center">
         </td></tr>
 
         <tr>
-            <td style="font-size:12px; color:red;"> kernel width= 10 </td>
+            <td style="font-size:12px; color:red;"> band-width= 10 </td>
             <td>
 
             <img width="70%" src="../images/image_blur/low10.png" class="center">
@@ -193,13 +192,18 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
 
 
 <h2 id="s5">3. Image registration</h2>
-       <p> translating and/or rotating an image ($I$) incur another image $I_1$. To precisely obtain the amount of translation and rotation, using domain frequency can be an efficient solution.
-        Let consider translation, meaning $I_1(x,y) = I(x-x_0, y-y_0)$.  <b>Phase only correlation</b> can be used to obtain the precise values for $(x_0, y_0)$. Representing the images
-        in their frequncy domain, we have $F_1(u,v) = e^{-j(ux_0+vy_0)} F(u,v)$. Then cross-correlation is computed:
+       <p> Image registration tends to align two images through affine transformation including translation, rotation, sheer, and etc.
+            Here, we see how to register two translated images using Fourier transform, which is simple and efficient.
+        Consider two images $I$ and $I_1$ that the latter is the translated version of the former, i.e. $I_1(x,y) = I(x-x_0, y-y_0)$.
+           <b>Phase only correlation</b> can be used to obtain the precise values for $(x_0, y_0)$. Specifically, by representing the images
+        in their frequency domain, we have $F_1(u,v) = e^{-j(ux_0+vy_0)} F(u,v)$. As it can be seen, magnitude of the images are equal, while their phases are different.
+           Thus, their phase difference can be used to estimate the amount of translation. In another hand, cross-correlation between $F$ and $F_2$ leads to $e^{-j2\pi(\frac{u}{N}x_0+\frac{v}{M}y_0)}$:
+
         $$C(u,v)=\frac{F(u,v)F^{*}_{1}(u,v)}{|F(u,v)||F^{*}_{1}(u,v)|}= e^{-j2\pi(\frac{u}{N}x_0+\frac{v}{M}y_0)}$$
 
-        Transferring back $C(u,v)$ from frequency domain to spatial domain, we have $c(x,y) = \delta(x-x_0, y-y_0)$. As this is an impulse signal with a single 1 at $(x_0,y_0)$. Therefore, the values of $x_0, y_0$
-        can be the maximum of $c(x,y)$.
+        Transferring back $C(u,v)$ from frequency domain to spatial domain, we have an delta function $c(x,y) = \delta(x-x_0, y-y_0)$, having
+           only 1 at $(x_0,y_0)$, that is displacement amount. Therefore, the values of $x_0, y_0$
+        can be $\arg\max c(x,y)$.
 </p>
         <h3 id="s6"> 3.1. Python code snippet </h3>
 <pre><code class="python">
@@ -247,6 +251,17 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
     return tx,ty, poc, img_translation
 </code></pre>
 
+        <h3 id="s7">Results</h3>
+        Two images are given, one is shifted version of the other. Using POC (phase only correlation), Our task is to find how much the second image is shifted, then shifting the first image by the obtained shift values.
+<div class="parent">
+        <div class="text">
+      <figure>
+      <img width="100%" src="../images/image_blur/translation.png" class="center">
+          <figcaption><span id="fig3">Figure 4: finding the amount of translation between left and middle images using POC method.
+              Then applying the translation matrix to the left image to translate it (resulting to right image). </span></figcaption>
+</figure>
+        </div>
+ </div>
 
     </section>
   </div>
