--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -44,6 +44,7 @@
         <li><h3><a href="#s5"> 3. Image registeration</a></h3></li>
         <ul>
         <li><a href="s6">3.1. Python code snippet</a></li>
+            <li><a href="s7"> 3.2. results </a></li>
         </ul>
 
   </ul>
