--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -39,12 +39,11 @@
     <li><h3> <a href="#s2"> 2. Image blurring </a></h3></li>
         <ul>
             <li> <a href="#s3"> 2.1. Python code snippet</a></li>
-            <li><a href="#4"> 2.2. Results</a></li>
+
         </ul>
         <li><h3><a href="#s5"> 3. Image registeration</a></h3></li>
         <ul>
         <li><a href="s6">3.1. Python code snippet</a></li>
-            <li><a href="s7"> 3.2. results </a></li>
         </ul>
 
   </ul>
@@ -155,9 +154,7 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
         a Gaussian low pass (GLP) filter (with a given kernel width), difference between the original image and its filtered one (3rd column).
     and (4th column) pixel density of images in the 1st and 2nd columns.</p>
         <div class="info">
-  <p> <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-sticky" viewBox="0 0 16 16">
-    <path d="M2.5 1A1.5 1.5 0 0 0 1 2.5v11A1.5 1.5 0 0 0 2.5 15h6.086a1.5 1.5 0 0 0 1.06-.44l4.915-4.914A1.5 1.5 0 0 0 15 8.586V2.5A1.5 1.5 0 0 0 13.5 1h-11zM2 2.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5V8H9.5A1.5 1.5 0 0 0 8 9.5V14H2.5a.5.5 0 0 1-.5-.5v-11zm7 11.293V9.5a.5.5 0 0 1 .5-.5h4.293L9 13.793z"/>
-  </svg> Notice that the GLP filter with larger (smaller)
+  <p>  Notice that the GLP filter with larger (smaller)
         kernel width leads to less (higher) blurriness,
         meaning it allows to pass more (less) higher frequencies.</p>
 </div>
