--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -200,10 +200,11 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
 
         $$C(u,v)=\frac{F(u,v)F^{*}_{1}(u,v)}{|F(u,v)||F^{*}_{1}(u,v)|}= e^{-j2\pi(\frac{u}{N}x_0+\frac{v}{M}y_0)}$$
 
-        Interestingly, inverse of Fourier transform of $C(u,v) leads to delta function $c(x,y) = \delta(x-x_0, y-y_0)$, which has
+        Interestingly, inverse of Fourier transform of $C(u,v)$ leads to delta function $c(x,y) = \delta(x-x_0, y-y_0)$, which has
            only 1 at entry $(x_0,y_0)$. Therefore, the values of translation (displacement) is $\arg\max c(x,y)$.
 </p>
         <h3 id="s6"> 3.1. Python code snippet </h3>
+        <p>the following code can be used to find the amount of displacement, then translate the first image accordingly.</p>
 <pre><code class="python">
     import numpy as np
     import cv2
@@ -250,7 +251,8 @@ In <a href="#tb1">figure 3</a>,  each row is exhibiting the original image (1st 
 </code></pre>
 
         <h3 id="s7">Results</h3>
-        Two images are given, one is shifted version of the other. Using POC (phase only correlation), Our task is to find how much the second image is shifted, then shifting the first image by the obtained shift values.
+        Two images are given, one is shifted version of the other. Using POC (phase only correlation), we can find how much
+        the first is <shifted class=""></shifted>
 <div class="parent">
         <div class="text">
       <figure>
