--- a/Blog.html
+++ b/Blog.html
@@ -12,12 +12,6 @@ layout: default
   <h1> Blog Posts</h1>
 
   <table style="width:100%">
-  <tr>
-
-
-     <td><a href="/Blogs/image_blur.html"> Image blurring in frequency domain</a></td>
-<td class="hashtag">#image processing </td>
-    </tr>
 
 
     <tr>
@@ -41,6 +35,12 @@ layout: default
     <td><a href="/Blogs/Data_anonymization_privacy.html"> Anonymized Synthetic Data Generation for Privacy-preserving purposes</a> </td>
   <td class="hashtag">#ML/Privacy  </td>
 </tr>
+
+
+       <tr>
+     <td><a href="/Blogs/image_blur.html"> Image manipulation in frequency domain</a></td>
+        <td class="hashtag">#image processing </td>
+    </tr>
 
 </table>
 
