--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -158,7 +158,7 @@ We use home credit dataset, a Kaggle dataset for predicting repayment abilities 
     <li><strong>Data standardization </strong>: float-type attributes are standardized to interval $[0,1]$</li>
 
 </ol>
-        {% include %}
+        {% include 'home_credite_2020-09.html'%}
 
 
 
