--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -150,7 +150,7 @@ The pre-trained encoder ($Enc(\cdot)$) maps each real record represented by $\ma
     <img src="../images/img_data_privacy/medGAn.png" class="center" width="50%">
     <figcaption>Figure 2: MedGAN for generating discrete-type (categorical) data by incorporating an AutoEncoder</figcaption>
 
-  </figure>
+  </figure></div></div>
 
 <h2 id ="s3"> Experiment</h2>
 We use home credit dataset, a Kaggle dataset for predicting repayment abilities of customers according to some attributes. First, the dataset is pre-processed as follows:
