--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -15,6 +15,11 @@
       }
     });
   </script>
+  <link rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+  crossorigin="anonymous">
+
 
   <script type="text/javascript"
           src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
@@ -152,7 +157,7 @@ The pre-trained encoder ($Enc(\cdot)$) maps each real record represented by $\ma
 
   </figure></div></div>
 
-<h2 id ="s3"> Experiment</h2>
+<h2 id ="s3"> 3. Experiment</h2>
 We use home credit dataset, a Kaggle dataset for predicting repayment abilities of customers according to some attributes. First, the dataset is pre-processed as follows:
 <ol>
     <li> <strong>Outlier removal</strong>: Outliers per attribute are detected according to their z-score (z-score>3), then removed.</li>
@@ -167,7 +172,7 @@ We use home credit dataset, a Kaggle dataset for predicting repayment abilities 
 
 
 
-<h2 id="s100">Reference</h2>
+<h2 id="s100">4. Reference</h2>
 <ol>
 <li >
 Karim Armanious, Chenming Jiang, Marc Fischer, Thomas Küstner, Konstantin Nikolaou, Sergios Gatidis, Bin Yang, MedGAN: "Medical Image Translation using GANs", Computerized medical imaging and graphics,2020.
