--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -153,9 +153,11 @@ The pre-trained encoder ($Enc(\cdot)$) maps each real record represented by $\ma
     <figure>
 
     <img src="../images/img_data_privacy/medGAn.png" class="center" width="50%">
-    <figcaption>Figure 2: MedGAN for generating discrete-type (categorical) data by incorporating an AutoEncoder</figcaption>
+    <figcaption class="figcaption">Figure 2: MedGAN for generating discrete-type (categorical) data by incorporating an AutoEncoder</figcaption>
 
   </figure></div></div>
+
+  
 
 <h2 id ="s3"> 3. Experiment</h2>
 We use home credit dataset, a Kaggle dataset for predicting repayment abilities of customers according to some attributes. First, the dataset is pre-processed as follows:
@@ -167,8 +169,9 @@ We use home credit dataset, a Kaggle dataset for predicting repayment abilities 
 
 </ol>
         
-
+<div>
         {% include 'home_credite_2020-09.html' %}
+</div>
 
 
 
