--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -1,7 +1,7 @@
 ---
-# this is an empty front matter
+layout: default
 ---
-<html>
+
 <head>
   <!--<script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
@@ -182,3 +182,5 @@ Karim Armanious, Chenming Jiang, Marc Fischer, Thomas Küstner, Konstantin Nikol
 
     </section>
 
+  </div>
+</body>
