--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<html>
 <head>
   <!--<script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
@@ -184,3 +184,4 @@ Karim Armanious, Chenming Jiang, Marc Fischer, Thomas Küstner, Konstantin Nikol
 
   </div>
 </body>
+</html>
