--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -82,7 +82,8 @@
     Notably, the datasets usually contain an
     enormous amount of sensitive and personal information and mishandling them can drastically threaten the data privacy of customers.
 Thus, before sharing these sensitive data with any third-party research institutions,
-    the holders of these datasets have to guarantee and preserve the privacy of their customers' information.
+    the holders of these datasets have to guarantee and preserve the privacy of their customers' information.</p>
+  <p>
     Data anonymization is one of the approaches for preserving data privacy as
     it aims to make <strong>de-identification attacks</strong>
     very hard or preferably impossible.
