--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default
         
       </section>
   
-<a href='index_2.html'>*</a>
+<a href='index_2.html'>test here </a>
   </body>
 </html>
 
