--- a/Blogs/index_2.html
+++ b/Blogs/index_2.html
@@ -1,76 +1,19 @@
 ---
 layout: default
 ---
-<h2>A clean timeline design, with animated links</h2>
-<div class="timeline"> 
-  <div class="timeline__event  animated fadeInUp delay-3s timeline__event--type1">
-    <div class="timeline__event__icon ">
-      <i class="lni-cake"></i>
-
-    </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
-    <div class="timeline__event__content ">
-      <div class="timeline__event__title">
-        Birthday
+<section>
+<div class="timeline">
+    <div class="container left">
+      <div class="content">
+        <h2>2017</h2>
+        <p>Lorem ipsum..</p>
       </div>
-      <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <h2>2016</h2>
+        <p>Lorem ipsum..</p>
       </div>
     </div>
   </div>
-  <div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
-    <div class="timeline__event__icon">
-      <i class="lni-burger"></i>
-
-    </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
-    <div class="timeline__event__content">
-      <div class="timeline__event__title">
-        Lunch
-      </div>
-      <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
-      </div>
-    </div>
-  </div>
-  <div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
-    <div class="timeline__event__icon">
-      <i class="lni-slim"></i>
-
-    </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
-    <div class="timeline__event__content">
-      <div class="timeline__event__title">
-        Exercise
-      </div>
-      <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
-      </div>
-
-    </div>
-  </div>
-  <div class="timeline__event animated fadeInUp timeline__event--type1">
-    <div class="timeline__event__icon">
-      <i class="lni-cake"></i>
-
-    </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
-    <div class="timeline__event__content">
-      <div class="timeline__event__title">
-        Birthday
-      </div>
-      <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
-      </div>
-    </div>
-  </div>
-
-</div>
+  </section>
