--- a/Blogs/index_2.html
+++ b/Blogs/index_2.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<body>
 <section>
 <div class="timeline">
     <div class="container left">
@@ -17,3 +18,4 @@ layout: default
     </div>
   </div>
   </section>
+  </body>
