--- a/Blogs/index_2.html
+++ b/Blogs/index_2.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <body>
 <section>
+    <h1> Blog Posts</h1>
     Salam here is a test for time table
 <div class="timeline">
     <div class="container left">
