--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@
           
           </ul>
         </div>
+
+        <div>
+          <span style="font-size: 24px; font-weight: bold;">Contact info</span>: mahdieh.abbasi.1@ulaval.ca | mahdiehabbasi.cs@gmail.com
+        </div>
 </section>
      <!--end of wrapper  -->
     </div>
