--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           </ul>
         </div>
 <div>
-  <span style="font-size: 20px; font-weight: bold;">Contact info</span>: mahdieh.abbasi.1@ulaval.ca | mahdiehabbasi.cs@gmail.com
+  <span style="font-size: 20px; font-weight: bold;">Contact info</span>: mahdieh.abbasi.1@ulaval.ca 
 </div>
         
 </section>
