--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       
     </tr>
     <tr>
-      <td style="color:gray ">Learn and extract relationship between data attributes to accurately predict a desire output</td>
+      <td style="color:gray ">Learn patterns and relationship between data features to predict a desire output</td>
       <td style="color:gray">End-to-end layer-wise ML models; learn to extract features, then classify</td>
       <td style="color:gray">Understand images (videos); detect objects</td>
       
