--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <tr>
       <td> Tools: scikit-learn | Scipy | Numpy</td>
       <td> Tools: PyTorch | TensorFlow | Theano</td>
-      <td> Tools: OpenCV | Pillow | scikit-image | torchvision</td>
+      <td> Tools: OpenCV | Pillow |  TorchVision</td>
     </tr>
     </table>
 
