--- a/index.html
+++ b/index.html
@@ -274,8 +274,15 @@
           
           </ul>
         </div>
+  
+  <p></p>
+  <p></p>
+  <hr class="separator">
+  <p></p>
+  <p></p>
 <div>
-  <span style="font-size: 20px; font-weight: bold;">Contact info</span>: mahdieh.abbasi.1@ulaval.ca 
+  <h2 style="text-align: center;">Contact info</h2>
+   <p style="text-align: center;">mahdieh.abbasi.1@ulaval.ca </p>
 </div>
         
 </section>
